samples/_failures_safe/1761505553_328786_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_47cef8ab.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_47cef8ab.c:165:9: error: expected declaration or statement at end of input
  165 |         case TOKEN_NUMBER: printf("NUMBER"); break;
      |         ^~~~
./samples/SAFE/__tmp_47cef8ab.c:165:9: error: expected declaration or statement at end of input
